--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<div id="quebec" class="container tab-pane active"><br>
 						<h3>Québec</h3>
 						<h5>Confirmed cases in Quebec</h5>
-						<p>Last update: 23/03/2020</p>
+						<p>Last update: 26/03/2020</p>
 						<iframe title="Covid-19 Cases - Quebec" aria-label="Table" id="datawrapper-chart-rGsdM"
 							src="https://datawrapper.dwcdn.net/rGsdM/1/" scrolling="no" frameborder="0"
 							style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;"
@@ -125,7 +125,7 @@
 								href="https://mobile-img.lpcdn.ca/lpca/924x/c1043320-6b2a-11ea-b33c-02fe89184577.jpg"
 								target="_b">from a chart</a> shared by the MSSS with health professionals.<br>Last
 							update:
-							23/03/2020</p>
+							26/03/2020</p>
 						<iframe title="[ Insert title here ]" aria-label="Interactive line chart"
 							id="datawrapper-chart-u4nU7" src="https://datawrapper.dwcdn.net/u4nU7/1/" scrolling="no"
 							frameborder="0" style="width: 0; min-width: 100% !important; border: none;"
@@ -137,7 +137,7 @@
 					<div id="canada" class="container tab-pane fade"><br>
 						<h3>Canada</h3>
 						<h5>Confirmed cases in Canada</h5>
-						<p>Last update: 23/03/2020</p>
+						<p>Last update: 26/03/2020</p>
 						<iframe title="Covid-19 Cases - Canada" aria-label="Table" id="datawrapper-chart-jBonp"
 							src="https://datawrapper.dwcdn.net/jBonp/1/" scrolling="no" frameborder="0"
 							style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;"
@@ -157,7 +157,7 @@
 					<div id="africa" class="container tab-pane fade"><br>
 						<h3>Africa</h3>
 						<h5>African countries with the most confirmed cases</h5>
-						<p>Last update: 23/03/2020</p>
+						<p>Last update: 26/03/2020</p>
 						<iframe title="[ Insert title here ]" aria-label="Interactive line chart"
 							id="datawrapper-chart-sjetK" src="https://datawrapper.dwcdn.net/sjetK/2/" scrolling="no"
 							frameborder="0"
@@ -173,7 +173,7 @@
 					<div id="world" class="container tab-pane fade"><br>
 						<h3>World</h3>
 						<h5>Countries with the most confirmed cases</h5>
-						<p>Last update: 23/03/2020 — Excluding China</p>
+						<p>Last update: 26/03/2020 — Excluding China</p>
 						<iframe title="[ Insert title here ]" aria-label="Interactive line chart"
 							id="datawrapper-chart-ruwJ3" src="https://datawrapper.dwcdn.net/ruwJ3/4/" scrolling="no"
 							frameborder="0"
@@ -181,7 +181,7 @@
 							height="400"></iframe>
 						<script type="text/javascript">!function () { "use strict"; window.addEventListener("message", function (a) { if (void 0 !== a.data["datawrapper-height"]) for (var e in a.data["datawrapper-height"]) { var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']"); t && (t.style.height = a.data["datawrapper-height"][e] + "px") } }) }();
 						</script>
-						<div class="col-12 mt-5"></div>
+						<!--<div class="col-12 mt-5"></div>
 						<h5>Proportion of all active* cases by country</h5>
 						<p>Last update: 23/03/2020 - *recovered cases and deaths were removed</p>
 						<iframe title="[ Insert title here ]" aria-label="Interactive line chart"
@@ -190,9 +190,7 @@
 							style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;"
 							height="500"></iframe>
 						<script type="text/javascript">!function () { "use strict"; window.addEventListener("message", function (a) { if (void 0 !== a.data["datawrapper-height"]) for (var e in a.data["datawrapper-height"]) { var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']"); t && (t.style.height = a.data["datawrapper-height"][e] + "px") } }) }();
-						</script>
-
-
+						</script>-->
 					</div>
 				</div>
 			</div>
