--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<div class="tab-content">
 					<div id="quebec" class="container tab-pane active"><br>
 						<h3>Québec</h3>
-						<h5>Confirmed cases in Quebec</h5>
+						<!--<h5>Confirmed cases in Quebec</h5>
 						<p>Last update: <script>document.write(new Date(new Date().toString().split('GMT')[0]+' UTC').toISOString().split('T')[0]);
 						</script></p>
 						<iframe title="Covid-19 Cases - Quebec" aria-label="Table" id="datawrapper-chart-rGsdM"
@@ -120,14 +120,11 @@
 							height="526"></iframe>
 						<script
 							type="text/javascript">!function () { "use strict"; window.addEventListener("message", function (a) { if (void 0 !== a.data["datawrapper-height"]) for (var e in a.data["datawrapper-height"]) { var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']"); t && (t.style.height = a.data["datawrapper-height"][e] + "px") } }) }();</script>
-
+						-->
 						<h5>Projected and Confirmed cases in Quebec</h5>
 						<p>Number of projected cases was extracted <a
 								href="https://mobile-img.lpcdn.ca/lpca/924x/c1043320-6b2a-11ea-b33c-02fe89184577.jpg"
-								target="_b">from a chart</a> shared by the MSSS with health professionals.<br>Last
-							update:
-							<script>document.write(new Date(new Date().toString().split('GMT')[0]+' UTC').toISOString().split('T')[0]);
-						</script></p>
+								target="_b">from a chart</a> shared by the MSSS with health professionals.</p>
 						<iframe title="[ Insert title here ]" aria-label="Interactive line chart"
 							id="datawrapper-chart-u4nU7" src="https://datawrapper.dwcdn.net/u4nU7/1/" scrolling="no"
 							frameborder="0" style="width: 0; min-width: 100% !important; border: none; margin-bottom: 4rem;"
@@ -136,8 +133,7 @@
 						</script>
 
 						<h5>Cumulative number of confirmed cases</h5>
-						<p>By number of days since 100th case<br>Last update: <script>document.write(new Date(new Date().toString().split('GMT')[0]+' UTC').toISOString().split('T')[0]);
-						</script></p>
+						<p>By number of days since 100th case</p>
 						<iframe title="[ Insert title here ]" aria-label="Interactive line chart" id="datawrapper-chart-h2nTE" src="https://datawrapper.dwcdn.net/h2nTE/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; margin-bottom: 4rem;" height="585"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
 						</script>
 
@@ -146,7 +142,8 @@
 
 					<div id="canada" class="container tab-pane fade"><br>
 						<h3>Canada</h3>
-						<h5>Confirmed cases in Canada</h5>
+						<h5>Unavailable</h5>
+						<!--<h5>Confirmed cases in Canada</h5>
 						<p>Last update: <script>document.write(new Date(new Date().toString().split('GMT')[0]+' UTC').toISOString().split('T')[0]);
 						</script></p>
 						<iframe title="Covid-19 Cases - Canada" aria-label="Table" id="datawrapper-chart-jBonp"
@@ -167,13 +164,14 @@
 							<p>By number of days since 100th case<br>Last update: <script>document.write(new Date(new Date().toString().split('GMT')[0]+' UTC').toISOString().split('T')[0]);
 						</script></p>
 							<iframe title="[ Insert title here ]" aria-label="Interactive line chart" id="datawrapper-chart-h2nTE" src="https://datawrapper.dwcdn.net/h2nTE/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; margin-bottom: 4rem;" height="585"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
-							</script>
+							</script>-->
 
 
 					</div>
 
 					<div id="africa" class="container tab-pane fade"><br>
-						<h3>Africa</h3>
+						<h5>Unavailable</h5>
+						<!--<h3>Africa</h3>
 						<h5>African countries with the most confirmed cases</h5>
 						<p>Last update: <script>document.write(new Date(new Date().toString().split('GMT')[0]+' UTC').toISOString().split('T')[0]);
 						</script></p>
@@ -183,13 +181,14 @@
 							style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;"
 							height="421"></iframe>
 						<script type="text/javascript">!function () { "use strict"; window.addEventListener("message", function (a) { if (void 0 !== a.data["datawrapper-height"]) for (var e in a.data["datawrapper-height"]) { var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']"); t && (t.style.height = a.data["datawrapper-height"][e] + "px") } }) }();
-						</script>
+						</script>-->
 
 					</div>
 
 
 					<div id="world" class="container tab-pane fade"><br>
-						<h3>World</h3>
+						<h5>Unavailable</h5>
+						<!--<h3>World</h3>
 						<h5>Countries with the most confirmed cases</h5>
 						<p>Last update: <script>document.write(new Date(new Date().toString().split('GMT')[0]+' UTC').toISOString().split('T')[0]);
 						</script> — Excluding China</p>
@@ -200,7 +199,7 @@
 							height="400"></iframe>
 						<script type="text/javascript">!function () { "use strict"; window.addEventListener("message", function (a) { if (void 0 !== a.data["datawrapper-height"]) for (var e in a.data["datawrapper-height"]) { var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']"); t && (t.style.height = a.data["datawrapper-height"][e] + "px") } }) }();
 						</script>
-						<!--<div class="col-12 mt-5"></div>
+						<div class="col-12 mt-5"></div>
 						<h5>Proportion of all active* cases by country</h5>
 						<p>Last update: 23/03/2020 - *recovered cases and deaths were removed</p>
 						<iframe title="[ Insert title here ]" aria-label="Interactive line chart"
